# FastMergeSort

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: CodeCoverage.cmake
inc/: FastMergeSortAlgorithm.h  FastMergeSortAlgorithmOMP.h  FastMergeSortAlgorithmSeq.h
src/: CMakeLists.txt  FastMergeSortAlgorithm.cpp  FastMergeSortAlgorithmOMP.cpp  FastMergeSortAlgorithmSeq.cpp
tests/: CMakeLists.txt  FMSSanityTest.cpp  FastMergeSortAlgorithmTestCtx.cpp  FastMergeSortAlgorithmTestCtx.h  IntegersTest.cpp  NegativeIntsTest.cpp  NonnegativeIntsTest.cpp  PerformanceTest.cpp
